--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+body {
+  width: 100%;
+  background-color: #f0f0f0;
+}
+
 h1 {
   color: blue;
   text-align: center;
@@ -16,6 +21,31 @@ h1 {
   width: 20%;
 }
 
-ul {
-  list-style: none;
+table {
+  width: 70%;
+  margin: 40px auto;
+}
+
+table tr {
+  background-color: blue;
+}
+
+table tr td:nth-of-type(1) {
+  width: 20%;
+}
+
+table tr td:nth-of-type(2) {
+  width: 60%;
+}
+
+table tr td:nth-of-type(3) {
+  width: 8%;
+}
+
+table tr td:nth-of-type(4) {
+  width: 8%;
+}
+
+table tr td button {
+  width: 100%;
 }
