--- a/css/style.scss
+++ b/css/style.scss
@@ -1,3 +1,7 @@
+body {
+  width: 100%;
+  background-color: #f0f0f0;
+}
 h1 {
   color: blue;
   text-align: center;
@@ -12,6 +16,25 @@ h1 {
     width: 20%;
   }
 }
-ul {
-  list-style: none;
+table {
+  width: 70%;
+  margin: 40px auto;
+  & tr {
+    background-color: blue;
+  }
+  & tr td:nth-of-type(1) {
+    width: 20%;
+  }
+  & tr td:nth-of-type(2) {
+    width: 60%;
+  }
+  & tr td:nth-of-type(3) {
+    width: 8%;
+  }
+  & tr td:nth-of-type(4) {
+    width: 8%;
+  }
+  & tr td button {
+    width: 100%;
+  }
 }
