--- a/css/style.scss
+++ b/css/style.scss
@@ -15,6 +15,9 @@ h1 {
   &__text {
     width: 20%;
   }
+  & #btn:hover {
+    cursor: pointer;
+  }
 }
 table {
   width: 70%;
@@ -37,4 +40,16 @@ table {
   & tr td button {
     width: 100%;
   }
+  & .btn {
+    width: 100%;
+    transition: all ease .6s;
+    &:hover {
+      cursor: pointer;
+      background-color: green;
+    }
+  }
+}
+
+.line-through {
+  text-decoration-line: line-through;
 }
