--- a/css/style.scss
+++ b/css/style.scss
@@ -1,10 +1,21 @@
+@import url('https://fonts.googleapis.com/css?family=Noto+Serif+JP'); //font読み込み
+ 
+html {
+  height: 100%;
+  width: 100%;
+}
 body {
   width: 100%;
-  background-color: #f0f0f0;
+  margin: 0;
+  padding: 0;
+  background: -moz-linear-gradient(top, #FFC778, #FFF);
+  background: -webkit-linear-gradient(top, #FFC778, #FFF);
+  background: linear-gradient(to bottom, #333, #192342);
 }
 h1 {
-  color: blue;
+  color: #0980f0;
   text-align: center;
+  font-family: 'Noto Serif JP', sans-serif;
 }
 .input {
   width: 100%;
@@ -15,34 +26,38 @@ h1 {
   &__text {
     width: 20%;
   }
-  & #btn:hover {
-    cursor: pointer;
+  & #btn {
+    color: #fff;
+    &:hover {
+      cursor: pointer;
+      color: #0980f0;
+    }
   }
 }
 table {
-  width: 70%;
+  width: 50%;
   margin: 40px auto;
   & tr {
-    background-color: blue;
+    color: #333;
   }
   & tr td:nth-of-type(1) {
-    width: 60%;
+    width: 1%;
+    color:#fff;
   }
   & tr td:nth-of-type(2) {
-    width: 8%;
+    width: 80%;
+    background-color: #f0f0f0;
+    padding-left: 20px;
   }
   & tr td:nth-of-type(3) {
-    width: 8%;
+    width: 1%;
+    color:#fff;
   }
-  & tr td button {
-    width: 100%;
-  }
-  & .btn {
-    width: 100%;
+  & i {
     transition: all ease .6s;
     &:hover {
       cursor: pointer;
-      background-color: green;
+      color: #0980f0;
     }
   }
 }
